# LocalLLM

./: .env.email.sample  .gitignore  API_SERVER_USAGE_GUIDE.md  DEVELOPMENT_HISTORY.md  EXTERNAL_INTEGRATION_SOLUTION.md  EXTERNAL_PROJECT_INTEGRATION_GUIDE.md  FINAL_RESOLUTION_REPORT.md  ISSUE_1_RESOLUTION_REPORT.md  ISSUE_2_RESOLUTION_REPORT.md  PACKAGE_MANAGEMENT.md  PROJECT_STRUCTURE_ORGANIZED.md  QUALITY_DIFFERENCE_ANALYSIS_FINAL.md  README.md  generate_email_preview.py  localllm_integration.py  main.py  pyproject.toml  quality_comparison_analysis.py  quality_comparison_client.py  quick_integration_test.py  quick_start.py  requirements-dev.txt  requirements.txt  setup.py  setup_new.py  test_config.yaml  test_issues_1_and_2_resolution.py
.github/: copilot-instructions.md
config/: email_config.yaml.sample  llama2_config.py  model_config.py  settings.py  summary_config.yaml
data/: new_test_document_2025.txt
doc/: ENHANCED_API_GUIDE.md  FORMAT_TYPE_FIX_REPORT.md  GUI_USAGE_GUIDE.md  LLM_TECHNICAL_INSIGHTS.md  LOGGING_CONFIGURATION_GUIDE.md  PICKLE_ERROR_FIX_REPORT.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  REAL_PROCESSING_GUIDE.md  batch_processing_complete.md  batch_processing_design.md  designspec.md
examples/: batch_llm_integration.py
models/: llama2_usage.md
scripts/: setup_email_simple.py
scripts/maintenance/: extract_packages.py  fix_gui_messages.py
scripts/setup/: complete_dependency_analysis.py  config_tool.py  email_config.py  install_dependencies.py  setup_environment.py
src/: __init__.py  document_processor.py  integration.py  main.py  summarizer.py  summarizer_enhanced.py
src/academic/: academic_gui.py  academic_output_formatter.py  academic_processor.py  llm_processor.py  technical_translator.py
src/api/: README.md  __init__.py  document_api.py  enhanced_api.py  enhanced_document_api.py  quick_api.py  server_controller.py  simple_api.py  summarization_api.py
src/batch_processing/: __init__.py  academic_batch_integration.py  batch_processor.py  error_handler.py  file_scanner.py  progress_tracker.py  report_generator.py  task_manager.py
src/gui/: __init__.py  batch_gui.py  enhanced_academic_processor.py  google_translate_processor.py  launcher.py  modern_batch_gui.py  real_processing.py
src/utils/: email_sender.py  email_sender_enhanced.py  gpu_validator.py  individual_json_processor.py  json_url_processor.py  language_detector.py  log_cleaner.py  logger.py  performance.py  performance_optimizer.py
test_data_technical/: AD5522_datasheet.txt  SMU_manual_chapter5.txt  detailed_technical_test.txt  final_test_doc.txt  technical_translation_paper.txt  test_technical_doc.txt
