[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localllm"
version = "1.0.0"
description = "A local LLM-based document summarization system with Japanese translation capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MameMame777"}
]
keywords = ["llm", "summarization", "japanese", "translation", "document-processing", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Researchers",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "pdfminer.six>=20221105",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "html2text>=2020.1.16",
    "llama-cpp-python>=0.2.0",
    "sentence-transformers>=2.2.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
    "googletrans==4.0.0rc1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
all = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
localllm = "localllm.main:main"
localllm-api = "localllm.api.document_api:main"
localllm-enhanced-api = "localllm.api.enhanced_document_api:main"

[project.urls]
Homepage = "https://github.com/MameMame777/LocalLLM"
Repository = "https://github.com/MameMame777/LocalLLM.git"
Issues = "https://github.com/MameMame777/LocalLLM/issues"
Documentation = "https://github.com/MameMame777/LocalLLM/blob/master/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
localllm = ["config/*.yaml", "config/*.json", "config/*.py"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
